# HCI571-AR

./: .gitignore  LICENSE
01_OSG_Example/: CMakeLists.txt  OSG_Example_01.cpp
01_OSG_Example/Debug/: jabba_scaled.3ds
02_OpenCV_Load_Image_Example/: CMakeLists.txt  OpenCV-Load_Image.cpp
03_OpenCV-VideoCam-Capture/: CMakeLists.txt  OpenCV-VideoCam-Capture.cpp
04_GLSL_Basic_Shader/: CMakeLists.txt  OSG_Basic_Shader_Example.cpp  teapot.3ds
04_GLSL_Basic_Shader/shader/: basic.fs  basic.vs
05_OpenCV_Camera_Calibration/: CMakeLists.txt  HCI571X_CameraCalibrationExample.cpp
06_Video_Renderer_Example/: ARVideoCapture.cpp  ARVideoCapture.h  CMakeLists.txt  HCI571X-VideoRenderer.cpp
07_Feature_Matching/: CMakeLists.txt  Feature_Matching.cpp  Feature_Matching.h
08_MarkerTracking/: CMakeLists.txt  MarkerDetector.cpp  MarkerDetector.h  main.cpp
08_MarkerTracking/Debug/: Camera_Parameter_File.yml
10_MarkerTracking_OSG/: ARTagNode.cpp  ARTagNode.h  CMakeLists.txt  Marker.cpp  Marker.h  MarkerDetector.cpp  main.cpp
12_Occlusion_Example/: ARTagNode.cpp  ARToolkitTypes.h  CMakeLists.txt  Marker.cpp  MarkerDetector.cpp  VideoRenderer.cpp  main.cpp
12_Occlusion_Example/data_art/: box.3ds  box.fbx  plane.3ds  plane.fbx  plane.jas  plane0_09.3ds  teapot.3ds  teapot.fbx
13_Extended_Occlusion_OSG/: ARTagNode.cpp  CMakeLists.txt  ContourRenderer.cpp  ContourRenderer.h  ExampleGeometry.h  HUD.cpp  HUD.h  PrerenderSubgraph.cpp  VideoScreen.h  main.cpp
14_Ray-Intersection-Test/: CMakeLists.txt  HUD.cpp  HUD.h  KeyboardEventHandler.cpp  KeyboardEventHandler.h  MoveableObject.cpp  MoveableObject.h  MoveableObjectCallback.cpp  main.cpp
14_Ray-Intersection-Test/data_art/: teapot.3ds  teapot.jas  teapot_green.3ds  teapot_large.3ds  underground.3ds  underground.mtl
14_Ray-Intersection-Test/shader/: videobg.fs  videobgExt.fs
15_Basic_Collision_Detection/: CMakeLists.txt  main.cpp
16_State_Machine/: CMakeLists.txt  FiniteStateMachine.cpp  FiniteStateMachine.h  FiniteStateMachineBuilder.cpp  FiniteStateMachineBuilder.h  MyFiniteStateMachineBuilder.cpp  MyFiniteStateMachineBuilder.h  MyTestStateOperation.cpp  State.cpp  State.h  StateOperation.cpp  StateOperation.h  StateParameter.cpp  StateParameter.h  StateTypes.h  Transition.cpp  Transition.h  main.cpp
18_ARBook/: ARBook.cpp  ARBook.h  ARBookVisitor.cpp  ARBookVisitor.h  ARPaddle.cpp  ARPaddle.h  ARPaddleCallback.cpp  ARPaddleCallback.h  ARPaddleOperation.cpp  ARPaddleOperation.h  ARPaddleStateParameters.cpp  ARPaddleStateParameters.h  ARPaddleTypes.h  ARTagNode.cpp  ARTagNode.h  CMakeLists.txt  DistanceNodeVisitor.cpp  DistanceNodeVisitor.h  HUD.cpp  HUD.h  KeyboardEventHandler.h  Marker.cpp  Marker.h  MarkerDetector.cpp  ModelHandler.cpp  ModelHandler.h  MoveableObject.cpp  MoveableObject.h  MoveableObjectCallback.h  VideoScreen.cpp  main.cpp
18_ARBook/StateMachine/: FSMExport.h  FiniteStateMachine.cpp  FiniteStateMachine.h  FiniteStateMachineBuilder.cpp  FiniteStateMachineBuilder.h  MyTestStateOperation.h  State.cpp  State.h  StateOperation.cpp  StateOperation.h  StateParameter.cpp  StateParameter.h  StateTypes.h  Transition.cpp  Transition.h
18_ARBook/data_art/: Camera_Parameter_File.yml  ball.3ds  ball2.3ds  box.3ds  box60.3ds  box60.jas  box60b.3ds  hood.3ds  sphere.3ds  sphere.jas  sphereG.3ds
18_ARBook/marker/: Basic_Marker1.ai
18_ARBook/models/: Polyeader.3ds  Polyeader.jas  cot_chevy_ready.3ds  cot_chv.tif  env.tif  teapot.3ds  teapot_red.3ds  tire.tif  underground.jas  underground2.3ds
19_Magic_Lens/: ARLens.cpp  ARLens.h  ARTagNode.cpp  CMakeLists.txt  ExampleGeometry.cpp  HUD.cpp  HUD.h  Marker.cpp  MarkerDetector.h  PrerenderSubgraph.h  VideoRenderer.cpp  VideoRenderer.h  VideoTexCallback.cpp  VideoTexCallback.h  main.cpp
19_Magic_Lens/marker/: Basic_Marker1.ai
19_Magic_Lens/models/: LensB.3ds  LensB.jas  hidden_teapot.3ds  hidden_teapot.mtl  lensA.3ds  lensA.jas  particle.jas  underground.3ds
19_Magic_Lens/shader/: arlens.fs  arlens.vs
